--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /vendor/
 
+application/config/config.php
+application/config/database.php
+application/libraries/mpdf
+
+
 # IDE Files
 #-------------------------
 /nbproject/
